# cmake-practice

./: README.md  test.py
02_01_multifiles_lib/: CMakeLists.txt  clear.py  test.py
02_multifiles/: CMakeLists.txt  test.py
03_multicatalog/: CMakeLists.txt  test.py
04_01_staticlib_intra/: CMakeLists.txt
04_01_staticlib_intra/example/: CMakeLists.txt
04_01_staticlib_intra/math/: CMakeLists.txt
04_02_staticlib_intra/: CMakeLists.txt  readme.md
04_staticlib_intra/: CMakeLists.txt  readme.md
04_staticlib_intra/example/: main.cpp
05_staticlib_extra/: CMakeLists.txt  readme.md
05_staticlib_extra/example/: CMakeLists.txt
06_dynlib_intra/math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
11_osgtest/: CMakeLists.txt  main.cpp
11_osgtest/CMakeModules/: CustomModules.cmake
12_osgearthtest/: CMakeLists.txt  main.cpp  readme.md
15_message/: CMakeLists.txt  clear.py
files/: CMakeLists.txt  files-bc.py
hello/: CMakeLists.txt  hello-bc.py  main.cpp
installTest/: CMakeLists.txt  clear.py  install_manifest.txt  test.py
installTest/math/: CMakeLists.txt
multi_catalog/: CMakeLists.txt  test.py
multi_catolog2/: CMakeLists.txt
temp/: readme.md
temp/example/: CMakeLists.txt
temp/math/: CMakeLists.txt
