# CMake 最低版本要求
cmake_minimum_required (VERSION 2.8)

# 项目信息
project (cmake-practice)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.7)
SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix for Debug mode, usually d on windows")

IF(COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows")

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(OpenThreads)
FIND_PACKAGE(osg)
FIND_PACKAGE(osgAnimation)
FIND_PACKAGE(osgDB)
FIND_PACKAGE(osgFX)
FIND_PACKAGE(osgGA)
FIND_PACKAGE(osgIntrospection)
FIND_PACKAGE(osgManipulator)
FIND_PACKAGE(osgParticle)
FIND_PACKAGE(osgShadow)
FIND_PACKAGE(osgSim)
FIND_PACKAGE(osgTerrain)
FIND_PACKAGE(osgText)
FIND_PACKAGE(osgUtil)
FIND_PACKAGE(osgVolume)
FIND_PACKAGE(osgWidget)
FIND_PACKAGE(osgViewer)

IF(WIN32)
    if(MSVC)
        ADD_DEFINITIONS( -D_SCL_SECURE_NO_WARNINGS)
        ADD_DEFINITIONS( -D_CRT_SECURE_NO_DEPRECATE)
    ENDIF(MSVC)
ENDIF(WIN32)

INCLUDE (CustomModules)

SET(EXAMPLE_NAME 11_osgtest)
SET(EXAMPLE_FILES main.cpp)

ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE_FILES})

INCLUDE_FOR_PROJECT(${EXAMPLE_NAME} OPENTHREADS OSG OSGDB OSGUTIL OSGVIEWER)
LINK_PROJECT(${EXAMPLE_NAME} OPENTHREADS OSG OSGDB OSGUTIL OSGVIEWER)
INSTALL_PROJECT(${EXAMPLE_NAME})


#消息输出测试
message ("Hello World")
message ("bin_dir " + ${PROJECT_BINARY_DIR})
message ("source_dir " + ${PROJECT_SOURCE_DIR})
message ("get env " + $ENV{OSGDIR}"")
